resolved alignment issue and download button inconsistensy

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 
 .tiny_cursive-analytics-btn {
     background-color: #306ab3;
@@ -1100,4 +1099,8 @@ body.tox-fullscreen .tiny-cursive-modal .modal-dialog .close {
 .tiny_cursive_eventplay_button:disabled {
   opacity: 0.5;
   cursor: not-allowed;
+}
+.tiny_cursive-writing-report-body table td,
+.tiny_cursive-writing-activity-report-body table td {
+    vertical-align: middle;
 }
